<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.skjolber.sesseltjonna-csv</groupId>
	<artifactId>sesseltjonna-csv</artifactId>
	<version>1.0.4-SNAPSHOT</version>

	<name>sesseltjonna-csv</name>
	<description>High-performance CSV databinding library</description>
	<url>https://github.com/skjolber/sesseltjonna-csv</url>

	<organization>
		<name>Media Skjolberg</name>
		<url>http://skjolber.github.io</url>
	</organization>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Thomas Skjølberg</name>
			<email>thomas.skjolberg@gmail.com</email>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:skjolber/sesseltjonna-csv.git</connection>
		<developerConnection>scm:git:git@github.com:skjolber/sesseltjonna-csv.git</developerConnection>
		<url>git@github.com:skjolber/sesseltjonna-csv.git</url>
		<tag>HEAD</tag>
	</scm>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/skjolber/sesseltjonna-csv/issues</url>
	</issueManagement>

	<ciManagement>
		<system>Travis</system>
		<url>https://travis-ci.org/skjolber/sesseltjonna-csv/builds/</url>
	</ciManagement>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>

		<asm.version>7.0</asm.version>
		<byte-buddy.version>1.9.3</byte-buddy.version>
		<univocity.version>2.7.6</univocity.version>

 		<commons-io.version>2.6</commons-io.version>
		<google-truth.version>0.42</google-truth.version>
		<junit.version>5.3.1</junit.version>
		
		<!-- plugins -->
		<build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
		<jacoco-maven-plugin.version>0.8.1</jacoco-maven-plugin.version>
		<nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
		<maven-source-plugin.version>2.2.1</maven-source-plugin.version>
		<maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
		<jacoco-maven-plugin.version>0.7.8</jacoco-maven-plugin.version>
		<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
		<maven-shade-plugin.version>3.1.1</maven-shade-plugin.version>
		<maven-war-plugin.version>3.2.2</maven-war-plugin.version>
		<owasp-dependency-check.version>3.2.1</owasp-dependency-check.version>
	</properties>

	<dependencies>
		<dependency>
		    <groupId>org.ow2.asm</groupId>
		    <artifactId>asm-commons</artifactId>
		    <version>${asm.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.ow2.asm</groupId>
		    <artifactId>asm</artifactId>
		    <version>${asm.version}</version>
		</dependency>
		<dependency>
		    <groupId>net.bytebuddy</groupId>
		    <artifactId>byte-buddy</artifactId>
		    <version>${byte-buddy.version}</version>
		    <optional>true</optional>
		</dependency>
		
		<!-- test dependencies -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.univocity</groupId>
			<artifactId>univocity-parsers</artifactId>
			<version>${univocity.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-api</artifactId>
		    <version>${junit.version}</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-engine</artifactId>
		    <version>${junit.version}</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.truth</groupId>
			<artifactId>truth</artifactId>
			<version>${google-truth.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.truth.extensions</groupId>
			<artifactId>truth-java8-extension</artifactId>
			<version>${google-truth.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<defaultGoal>clean test</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
			</plugin>
		    <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-surefire-plugin</artifactId>
		        <version>${maven-surefire-plugin.version}</version>
		    </plugin>			
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>${nexus-staging-maven-plugin.version}</version>
				<extensions>true</extensions>
				<executions>
					<execution>
						<id>default-deploy</id>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>false</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>${maven-release-plugin.version}</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<useReleaseProfile>false</useReleaseProfile>
					<releaseProfiles>release</releaseProfiles>
					<goals>deploy</goals>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<!-- mvn -P release release:perform -->
			<id>release</id>
			<properties>
				<!-- this is useful when the desired key is not the default (first) export 
					GPG_KEY_NAME=ABCDEF01 -->
				<gpg.executable>gpg</gpg.executable>
				<gpg.keyname>${env.GPG_KEY_NAME}</gpg.keyname>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

</project>
